# rust_playground

./: Cargo.toml
.cargo/: config.toml
proto/: out  test.proto
src/: jemalloc.rs
src/test_ffi/: Cargo.toml  build.rs
src/test_ffi/src/: hello.c  lib.rs
src/test_jemalloc/: Cargo.toml
src/test_jemalloc/src/: jemalloc.rs
