[package]
name = "test-jemalloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#rustc-link-search = ["/usr/lib/x86_64-linux-gnu/"]
#rustc-link-lib = ["jemalloc"]

[dependencies]
tikv-jemalloc-ctl = "0.5.0"
tikv-jemalloc-sys = { version = "0.5.0", features = ["stats"] }
tikv-jemallocator = { version = "0.5.0", features = ["stats"] }

[[bin]]
name = "test_jemalloc"
path = "./src/jemalloc.rs"